    - Pull the debug rendering a layer higher
    - Follow the single line to the back
    - Fail at making the input respect the direction
    - Fix it, but tight corners still break it
    - Fix the backwards solver
    - Attempt to support backwards underground belts
    - Fix undergrounds
    - Make forward underground belts function
    - Cleanup
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2024. 11. 12
  Info:
    - Decouple struct creation/destruction from belt control behaviour
    - Create the combinator through the checkbox
    - Rely on player.opened vs checking for tags
    - Assert instead of error
    - Remove combinator when moving the belt away from read all mode
    - Customize assert
    - Reset the belt count gui when the belt no longer holds all
    - Prevent selecting a control signal until the combinator exists
    - Reset signal picker when unchecking the checkbox
    - Setup the correct state during reset & checkbox regardless of on_tick
    - Cleanup
    - Switch things around
    - Move some local functions to a helpers file
    - Move more functions into helpers
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 11. 12
  Info:
    - Setup the hidden blueprintable entity
    - Prevent the combinator from being placed somewhere without belts
    - Run on_tick conditionally
    - Improve on_tick readability
    - Disable the checkbox, label & button whilst not reading all belts
    - Cleanup nested gui access
    - Create and destroy the combinator based on hold (all belts)
    - Ensure the combinator doesn't exist as a ghost
    - Add a sanity check that ensures only one combinator can occupy a tile
    - Remove the combinator when the belt gets destroyed
    - Check for the prescence of any wires at all
    - As long as a belt exists at the combinator's tile, stay existing